<resources>
    <string name="app_name">pr32_gorovoy</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="text_screen1">Введите ваш логин и пароль</string>
    <string name="enter">ВОЙТИ</string>
    <string name="register">Регистрация</string>
    <string name="square_name">Расчёт площади</string>
    <string name="result">Результат</string>
    <string name="enter_count_meters">Введите количество метров</string>
    <string name="items">1. 1-о комнатная квартира\n2. 2-х комнатная квартира\n3. 3-х комнатная квартира\n4. Студия</string>
    <string name="pick_price_for_metres">Выберите стоимость метра</string>
    <string name="resultat_rachet">Результат расчета</string>
    <string name="count_meters">Количество метров</string>
</resources>